# english-to-hindi

./: .env.example  README.md  app.py  pyproject.toml  report.md
src/video_dubbing/: crew.py  main.py
src/video_dubbing/config/: agents.yaml  tasks.yaml
src/video_dubbing/tools/: custom_tool.py
