[project]
name = "video_dubbing"
version = "0.1.0"
description = "video_dubbing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "pysqlite3-binary == 0.5.4"
]

[project.scripts]
video_dubbing = "video_dubbing.main:run"
run_crew = "video_dubbing.main:run"
train = "video_dubbing.main:train"
replay = "video_dubbing.main:replay"
test = "video_dubbing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.poetry.dependencies]
streamlit = "*"
moviepy = "*"
gtts = "*"
openai = "*"
whisper = "*"
crewai = "*"
crewai-tools = "*"
python-dotenv = "*"
